<resources>
    <string name="app_name">Roadz</string>
    <string name="channel_name">channel name</string>
    <string name="channel_description">channel_description</string>
    <string name="required">required</string>
    <string name="required_field"> This field is required</string>
    <string name="too_small"> Password must exceed 6 fields</string>
    <string name="add_correct_phone_num"> The phone number must be of 8 digits</string>
    <string name="similar_pass"> Please make sure your passwords match</string>
    <string name="address_requerd"> Please add your address</string>
    <string name="correct_email"> Please enter a valid email address</string>
    <string name="ok">OK</string>
    <string name="No">No</string>
    <string name="change_language">Change Language</string>
    <string name="change_language_msg"> Are you sure you want to change the language?</string>
    <string name="logout_required">Sign out</string>
    <string name="logout_required_msg"> Are you sure you want to sign out ?</string>
    <string name="login_required">Login Required</string>
    <string name="login_required_msg"> This feature requires registration, do you want to register?</string>
    <string name="cancel">No</string>
    <string name="cancel2">cancel</string>
    <string name="login">Login</string>
    <string name="signup">Signup</string>
    <string name="yes">Yes</string>
    <string name="select_language">Select Language</string>
    <string name="Sign_in">SIGN IN</string>
    <string name="no_data">No Data</string>
    <string name="unexpected_error">There is no data for this email</string>
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="powered_by_line">Powered by line</string>
    <string name="menu_home">Home</string>
    <string name="menu_profile">My Profile</string>
    <string name="menu_cars">My Cars</string>
    <string name="menu_subscriptions">My Subscriptions</string>
    <string name="menu_services">Our Services</string>
    <string name="menu_login">Log in</string>
    <string name="menu_about">About Us</string>
    <string name="menu_contact_us">Contact Us</string>
    <string name="menu_setting">Settings</string>
    <string name="menu_logout">Logout</string>
    <string name="maintenance">Maintenance</string>
    <string name="coming_soon">Coming Soon!</string>
    <string name="emergency">Emergency</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="log_in">LOG IN</string>
    <string name="continue_guest">Continue as a Guest</string>
    <string name="or">Or</string>
    <string name="dont_have_lightfix_account">Don\'t Have Roadz Account ?</string>
    <string name="sign_up">SIGN UP</string>
    <string name="forgot_password_title">FORGOT PASSWORD</string>
    <string name="reset_password">Reset Password</string>
    <string name="get_started">Get Started</string>
    <string name="full_name">Full Name</string>
    <string name="your_name">Your Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="add_personal_details">Add Personal Details</string>
    <string name="add_car_details">Add Car Details</string>
    <string name="car_color">Car Color</string>
    <string name="white">White</string>
    <string name="car_plate_number">Car Plate Number</string>
    <string name="submit">SUBMIT</string>
    <string name="agree_terms_conditions"><![CDATA[   I agree to the Terms & Conditions]]></string>
    <string name="car_maker">Car Maker</string>
    <string name="car_model">Car Model</string>
    <string name="select_year">Select Year</string>
    <string name="notifications">Notifications</string>
    <string name="nothing_here">Nothing Here !!!</string>
    <string name="no_notifications">you don\'t have yet any notifications from Roadz</string>
    <string name="update_profile">UPDATE</string>
    <string name="terms_conditions"><![CDATA[Terms & Conditions]]></string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="leave_us_a_message">Leave us a message</string>
    <string name="name">Name</string>
    <string name="enter_your_name">enter your name</string>
    <string name="enter_your_email2">enter your email</string>
    <string name="phone_number">Phone Number</string>
    <string name="enter_your_phone_number">enter your phone number</string>
    <string name="message">Message</string>
    <string name="enter_your_message">enter your message</string>
    <string name="info">Info:</string>
    <string name="phone_number_info">Phone Number:</string>
    <string name="info_email">Email:</string>
    <string name="language">Language</string>
    <string name="en">EN</string>
    <string name="ar">AR</string>
    <string name="off">Off</string>
    <string name="on">On</string>
    <string name="plate_number">Plate Number</string>
    <string name="delete">Delete</string>
    <string name="add_car">Add a Car</string>
    <string name="status">Status:</string>
    <string name="amount">Amount:</string>
    <string name="end_date">End Date:</string>
    <string name="start_date">Start Date:</string>
    <string name="car_model_">Car Model:</string>
    <string name="order_id">Order ID :</string>
    <string name="order_id1">Reference ID :</string>
    <string name="renew">Renew</string>
    <string name="error">ERROR!</string>
    <string name="no">NO</string>
    <string name="yes_msg">YES</string>
    <string name="add_new_car">ADD NEW CAR</string>
    <string name="proceed">PROCEED</string>
    <string name="proceed1">PROCEED</string>
    <string name="choose_car">Choose a car</string>
    <string name="subscription_expired_msg">Your subscription has expired please renew</string>
    <string name="car_already_subscribed">This car is already subscribed to Roadz emergency service Are you sure you want to delete it?</string>
    <string name="renew_btn">RENEW</string>
    <string name="cancel_btn">Cancel</string>
    <string name="call_us">Call Us</string>
    <string name="request_submitted">Your request has been submitted to follow up please call.</string>
    <string name="call">CALL</string>
    <string name="emergency_subscription">Subscription Period</string>
    <string name="subscribe">Subscribe</string>
    <string name="subscribe_msg">Subscribe for one year \n with unlimited Services</string>
    <string name="lightfix_emergency_package_for">Roadz Emergency Package for</string>
    <string name="need_choose_car">You need to Choose a car</string>
    <string name="checkout">CHECKOUT</string>
    <string name="order_summary">Order Summary</string>
    <string name="subscription_date">Subscription Date</string>
    <string name="total_price">Total Price</string>
    <string name="have_promo_code">Have Promo Code?</string>
    <string name="apply">APPLY</string>
    <string name="Tota_prise_val">Total: %1$s</string>
    <string name="pay">PAY</string>
    <string name="payment_success">PAYMENT SUCCESS</string>
    <string name="payment_decline">PAYMENT DECLINE</string>
    <string name="order_details">Order Details</string>
    <string name="order_id_q">Order ID</string>
    <string name="subscription_expiry_date">Subscription Expiry Date</string>
    <string name="done">Done</string>
    <string name="try_again">Try again</string>
    <string name="select_service">Choose the year</string>
    <string name="continue_txt">CONTINUE</string>
    <string name="select_one_service">Please select a problem</string>
    <string name="service_status">Service Status</string>
    <string name="help_on_the_way">Don\'t worry ,help is on the way…</string>
    <string name="request_sent_successfully">Request sent Successfully \n  We will contact you now for confirmation</string>
    <string name="request_failed">Request Failed \n  TRY AGAIN</string>
    <string name="Password_reset_msg">Reset password has been sent to your email</string>
    <string name="profile_update_successfully">Profile updated successfully</string>
    <string name="password_update_successfully">Password updated successfully</string>
    <string name="You_must_choose">You must choose the</string>
    <string name="car_years">Car years</string>
    <string name="tc_approved_msg">Terms and conditions must be approved</string>
    <string name="message_send_successfully">Your Message Sent successfully</string>
    <string name="car_delete_successfully">Your car was successfully deleted</string>
    <string name="youtube_unavailable">YouTube link is currently unavailable</string>
    <string name="delete_car_confirm">Are you sure you want to delete </string>
    <string name="add">Add</string>
    <string name="car_added_successfully">Car added successfully</string>
    <string name="discount">Discount: %1$s </string>
    <string name="subscribe_Package_confirm">Are you sure you want to subscribe to the current Package ?</string>
    <string name="subscribe_service_Package_confirm">Are you sure to request a service for the chosen Location ?</string>
    <string name="Complete_checkout">Complete Payment</string>
    <string name="Complete_checkout_msg">Go to External Link to Complete the payment</string>
    <string name="complete_checkout_previous_order_msg">A previous order has not completed its payment process</string>
    <string name="send_email">Send email…</string>
    <string name="emergency_details">Emergency Details</string>
    <string name="current_password">Current password</string>
    <string name="new_password">New password</string>
    <string name="confirm_new_password">Confirm new password</string>
    <string name="change_password">Change Password</string>
    <string name="user_guide">User Guide</string>
    <string name="don_t_have_account_sign_up">Don’t Have Account ? Sign Up</string>
    <string name="not_verified">Not Verified</string>
    <string name="verified">Verified</string>
    <string name="resend_verification_link">Resend Verification Link</string>
    <string name="verification_link_send_successfully">Verification Link Sent Successfully</string>
    <string name="subscription_started">Subscription Started</string>
    <string name="subscription_end">Subscription End</string>
    <string name="no_subscription">No Subscription</string>
    <string name="roadside_assistant">Roadside Assistant</string>
    <string name="request">Request</string>
    <string name="try_to_request">Try To Request (Demo)</string>
    <string name="Log_in_Register">Log in/Register</string>
    <string name="guest">Guest</string>
    <string name="start_date_checkout">Start Date</string>
    <string name="end_date_checkout">End Date</string>
    <string name="subscription_period">Subscription Period</string>
    <string name="request_has_been_sent">Request has been sent</string>
    <string name="we_are_on_the_way">We are on the way</string>
    <string name="you_will_receive_a_call_now_for_a_confirmation">You will receive a call now for a confirmation</string>
    <string name="choose_the_problem">Choose The Problem</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="yes_call">Yes, Call</string>
    <string name="demo_kd_15_annual">KD 15 Annual</string>
    <string name="demo_unlimited_roadside_assistant_requests_for_one_year">Unlimited roadside assistant requests for one year</string>
    <string name="services_overview">Services overview</string>
    <string name="demo_title1">Battery Recharge</string>
    <string name="demo_title2">Towing</string>
    <string name="demo_title3">Refuel</string>
    <string name="demo_title4">Tire Puncture</string>
    <string name="demo_title5">Open Locks</string>
    <string name="easy">Easy ?</string>
    <string name="yes_sign_up">Yes, Sign Up</string>
</resources>